--- a/src/components/feehoemsection/feehome.css
+++ b/src/components/feehoemsection/feehome.css
@@ -11,16 +11,16 @@
     box-shadow: inset ;
   }
 
-  .hero-silde-content-session {
-    /* display: grid; */
+  .hero-silde-session {
+    display: grid;
     width: 90%;
     padding: 15px;
     margin-left: 5%;
     gap: 10px;
   }
 
-  .primary-button {
-    width: 90% !important;
+  .fee-primary-button {
+    width: 100% !important;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -29,7 +29,7 @@
     color: white !important;
   }
 
-  .arrow-icon-img {
+  .fee-arrow-icon-img {
     border-radius: 50%;
     background-color: #F3E8EA;
     padding: 5px;
@@ -86,15 +86,15 @@
     box-shadow: inset ;
   }
 
-  .hero-silde-content-session {
-    /* display: grid; */
+  .hero-silde-session {
+    display: grid;
     width: 60%;
     padding: 15px;
     margin-left: 5%;
     gap: 10px;
   }
 
-  .primary-button {
+  .fee-primary-button {
     /* width: 90% !important; */
     display: flex;
     align-items: center;
@@ -104,7 +104,7 @@
     color: white !important;
   }
 
-  .arrow-icon-img {
+  .fee-arrow-icon-img {
     border-radius: 50%;
     background-color: #F3E8EA;
     padding: 5px;
@@ -160,15 +160,15 @@
     box-shadow: inset ;
   }
 
-  .hero-silde-content-session {
-    /* display: grid; */
+  .hero-silde-session {
+    display: grid;
     width: 80%;
     padding: 15px;
     margin-left: 5%;
     gap: 25px;
   }
 
-  .primary-button {
+  .fee-primary-button {
     /* width: 90% !important; */
     display: flex;
     align-items: center;
@@ -178,7 +178,7 @@
     color: white !important;
   }
 
-  .arrow-icon-img {
+  .fee-arrow-icon-img {
     border-radius: 50%;
     background-color: #F3E8EA;
     padding: 5px;
@@ -235,14 +235,14 @@
   }
 
   .hero-silde-content-session {
-    /* display: grid; */
+    display: grid;
     width: 60%;
     padding: 15px;
     margin-left: 5%;
     gap: 25px;
   }
 
-  .primary-button {
+  .fee-primary-button {
     /* width: 90% !important; */
     display: flex;
     align-items: center;
@@ -252,7 +252,7 @@
     color: white !important;
   }
 
-  .arrow-icon-img {
+  .fee-arrow-icon-img {
     border-radius: 50%;
     background-color: #F3E8EA;
     padding: 5px;
@@ -307,26 +307,26 @@
     box-shadow: inset ;
   }
 
-  .hero-silde-content-session {
-    /* display: grid; */
-    width: 50%;
+  .hero-silde-session {
+    display: grid;
+    width: 50% ;
     padding: 15px;
     margin-left: 5%;
     gap: 20px;
   }
 
-  .primary-button {
+  .fee-primary-button {
     /* width: 42% !important; */
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     padding: 12px 25px;
     gap: 18px;
-    background-color: #841D2E !important;
-    color: white !important;
+    background-color: #841D2E ;
+    color: white ;
   }
 
-  .arrow-icon-img {
+  .fee-arrow-icon-img {
     border-radius: 50%;
     background-color: #F3E8EA;
     padding: 5px;
