--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -187,7 +187,7 @@
 @media screen and (min-width:768px) {
 
     .footer-main {
-        height: 1000px;
+        height: 1400px; 
         width: 100%;
         padding: 2rem;
         display: flex;
@@ -198,12 +198,13 @@
     }
 
     .footer-content-section {
-
-        height: 75%;
+        padding: 3rem;
+        height: 70%;
         width: 98%;
         display: flex;
         align-items: center;
         justify-content: space-evenly;
+        
 
 
         .secondary-paragraph {
